Refactor TracedTextWrapperTransformer to use Java callback for trace detection
Instead of wrapping traced text in span/tspan elements with trace-tag
attributes, ZWC markers now stay in the text and JavaScript calls the
getTraceFromText() Java function to decode them on hover.

Changes:
- Add GetTraceFromTextFunction browser function for JS-to-Java callback
- Simplify TracedTextWrapperTransformer to a no-op (ZWC markers preserved)
- Update picto-trace-toolbar.js to use Java callback instead of attribute detection
- Remove unused helper classes (TracedSegment, CrossElementTrace, SiblingTextContext)
- Fix Files.writeString() compatibility issue in TraceToolbarAppender

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>